fixes layout issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -107,7 +107,7 @@
 .word-count{
   height: 150px;
   width: 33%;
-  border: 1px solid black;
+  border-right: 1px solid black;
   font-size: 40px;
   float: left;
 /*  background-color: #FF9A52;
@@ -158,7 +158,7 @@ a:hover {
 .new-word-button{
   height: 150px;
   width: 33%;
-  font-size: 23px;
+  font-size: 1.5em;
   border: 1px solid black;
   color: black;
   background-color: white;
@@ -182,7 +182,7 @@ a:hover {
   border: 1px solid black;
   float: right;
   margin-right: 1px;
-  font-size: 23px;
+  font-size: 1.5em;
 /**  background-color: #FF9A52;
 */  color: black;
 }
